...
        OutlinedTextField(
            value = query,
            onValueChange = onQueryChanged,
            modifier =
                Modifier
                    .fillMaxWidth()
                    .testTag("search_text_field")
                    .semantics {
                        contentDescription = searchFieldDesc
                    },
            placeholder = {
                Text(text = stringResource(id = R.string.search_placeholder))
            },
...
    onClick: () -> Unit,
) {
    Card(
        modifier =
            Modifier
                .fillMaxWidth()
                .testTag("location_item")
                .semantics(mergeDescendants = true) {
                    contentDescription = "${location.name}, ${location.country}"
                    role = Role.Button
                },
        shape = RoundedCornerShape(12.dp),
        colors =
...
